--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "sequelize": "^6.37.0",
+    "sequelize": "^6.37.1",
+    "sequelize-cli": "^6.6.2",
     "sqlite3": "^5.1.7",
     "web-vitals": "^2.1.4"
   },
