--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "json-server": "^1.0.0-alpha.23",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "path": "^0.12.7",
